--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-
-<h1>hello world
-     This is bala</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>JavaScript DrumKit</title>
+     <link rel="stylesheet" href="style.css">
+</head>
+<body>
+     <script src="script.js"></script>
+</body>
+</html>
