--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
          <div data-key="71" class="key">
               <kbd>G</kbd>
-              <span>openhat</span>
+              <span>open</span>
           </div>
          <div data-key="72" class="key">
               <kbd>H</kbd>
@@ -46,15 +46,15 @@
               <span>tom</span>
           </div>
      </div>
-     <audio src="./sounds/boom.wav" datakey="65"></audio>
-     <audio src="./sounds/clap.wav" datakey="83"></audio>
-     <audio src="./sounds/hihat.wav" datakey="68"></audio>
-     <audio src="./sounds/kick.wav" datakey="70"></audio>
-     <audio src="./sounds/openhat.wav" datakey="71"></audio>
-     <audio src="./sounds/ride.wav" datakey="72"></audio>
-     <audio src="./sounds/snare.wav" datakey="74"></audio>
-     <audio src="./sounds/tink.wav" datakey="75"></audio>
-     <audio src="./sounds/tom.wav" datakey="76"></audio>
+     <audio src="./sounds/boom.wav" data-key="65"></audio>
+     <audio src="./sounds/clap.wav" data-key="83"></audio>
+     <audio src="./sounds/hihat.wav" data-key="68"></audio>
+     <audio src="./sounds/kick.wav" data-key="70"></audio>
+     <audio src="./sounds/openhat.wav" data-key="71"></audio>
+     <audio src="./sounds/ride.wav" data-key="72"></audio>
+     <audio src="./sounds/snare.wav" data-key="74"></audio>
+     <audio src="./sounds/tink.wav" data-key="75"></audio>
+     <audio src="./sounds/tom.wav" data-key="76"></audio>
      <p>Press the Key to play the respective sound</p>
      <script src="script.js"></script>
 </body>
